--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-dsn="postgres://postgres:admin@172.17.0.1:5432/test?sslmode=disable"
+user_dsn="postgres://postgres:admin@172.17.0.1:5432/user?sslmode=disable"
+cart_dsn="postgres://postgres:admin@172.17.0.1:5432/cart?sslmode=disable"
+
 jwtKey="jwtKey"
 USER_SERVICE_GRPC_ADDR=user:5001
