--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+NATS_DSN="nats://localhost:4222"
 user_dsn="postgres://postgres:admin@172.17.0.1:5432/user?sslmode=disable"
 cart_dsn="postgres://postgres:admin@172.17.0.1:5432/cart?sslmode=disable"
+SHOPIFY_API_KEY=7d5c2bba5049634226c1bc092cf3b106
+SHOPIFY_API_SECRET=63ded473e749587c59bc56e649cda68d
 
 jwtKey="jwtKey"
 USER_SERVICE_GRPC_ADDR=user:5001
+CART_SERVICE_GRPC_ADDR=cart:5002
+
+APPLICATION_URL="http://localhost:8080"
